Fixed broken lettuce tests and spacing between tag and account info icon

--- a/Tinville/static/css/main.css
+++ b/Tinville/static/css/main.css
@@ -185,6 +185,10 @@ body {
     margin-top: -3px;
 }
 
+#lg-menuLogin {
+    margin-right: 25px;
+}
+
 #navLogout {
     font-size: 2em;
     margin-right: 5%;
